# jlbun

./: .eslintignore  .gitignore  .npmignore  .npmrc  .prettierignore  .prettierrc.cjs  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  bench.ts  bunfig.toml  eslint.config.mjs  hierarchy.html  index.html  index.ts  justfile  modules.html  package.json  rollup.config.js  test.ts  tsconfig.json  tsconfig.typedoc.json
.husky/: pre-commit
assets/: hierarchy.js  highlight.css  navigation.js  search.js
c/: wrapper.c
classes/: ArgumentError.html  BoundsError.html  DimensionMismatch.html  DivideError.html  DomainError.html  GCManager.html  InexactError.html  InterruptException.html  Julia.html  JuliaAny.html  JuliaArray.html  JuliaBool.html  JuliaChar.html  JuliaComplex.html  JuliaDataType.html  JuliaDict.html  JuliaError.html  JuliaFloat16.html  JuliaFloat32.html  JuliaFloat64.html  JuliaFunction.html  JuliaIdDict.html  JuliaInt16.html  JuliaInt32.html  JuliaInt64.html  JuliaInt8.html  JuliaModule.html  JuliaNamedTuple.html  JuliaNothing.html  JuliaPair.html  JuliaPtr.html  JuliaRange.html  JuliaScope.html  JuliaSet.html  JuliaString.html  JuliaSubArray.html  JuliaSymbol.html  JuliaTask.html  JuliaTuple.html  JuliaUInt16.html  (+16 more)
cmake/: FindJulia.cmake
enums/: ComplexElementType.html  MIME.html
examples/: 01_linear_algebra.ts  02_monte_carlo.ts  03_zero_copy.ts  04_complex_numbers.ts  README.md
functions/: createJuliaError.html  enterJuliaScope.html  safeCString.html
interfaces/: FromBunArrayOptions.html  JuliaOptions.html  (+8 more)
jlbun/: gc.ts  (+23 more)
(+48 files in other folders)
